--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "graph",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "10.15.2", "npm": "5.8.0" },
   "dependencies": {
     "d3": "^6.3.1",
     "react": "^17.0.1",
@@ -11,7 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "heroku-postbuild": "npm run build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
